# realpy-feed

./: pyproject.toml  readme.md  setup.py
reader/: __main__.py  config.txt  feed.py  viewer.py
