[tool.poetry]
name = "realpy-feed"
version = "0.1.1"
description = "Read the latest Real Python tutorials"
readme = "README.md"
homepage = "https://github.com/younger-1/realpy-feed"
authors = ["Xavier Young <45989017+younger-1@users.noreply.github.com>"]
license = "MIT"
packages = [{include = "reader"}]
# include = ["reader/*.txt"]

[tool.poetry.scripts]
realpy-feed = "reader.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^6.0.8"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
